# lightning-talks

./: .envrc  .gitignore
ansi-escape-sequences/: 01-ticker.py  02-ticker.py  03-ticker.py  04-ticker.py  README.md
caching/: README.md  lru_cache.py
debuggers/: README.md  requirements.txt
debuggers/src/: debuggers.py
env-vars/: README.md  dotenv_test.py  env_test.py  example_bad.py  example_better.py
fernet-database-encryption/: app.py  pyproject.toml
fractions/: dimensions.py  inches_to_feet.py
getpass-tty/: 01.py  02.py
instructor/: crc-cards.py  prompt.txt  pyproject.toml
interactive-application/: README.md
interactive-application/ipython_app/: main.py
interactive-application/stdlib_app/: main.py
jinja2/: convert.py  single-dispatch-conversion.py
multiprocess/: processes.py  serial.py
pathlib/: README.md
pydantic/: README.md  settings.py
pyinstaller/: pyinstaller.md
pyotp-docker/: Dockerfile  Makefile  README.md
pyotp-docker/src/: app.py
random-password/: README.md  plots.ipynb  pyproject.toml  random-password.ipynb  randompasslib.py  randpassword.py
random-password/.ipynb_checkpoints/: random-password-checkpoint.ipynb
robotframework/: README.md  requirements.txt
robotframework/libraries/: StringLibrary.py  TestLibrary.py
robotframework/resources/: main.resource
robotframework/tests/: TestFailures.robot  TestSuccess.robot
singledispatch/: README.md  dispatch.py  typemap.py
wsl-gui/: README.md  mat.py  tk.py  wsl-gui.md
zipapp/: Makefile  README.md
zipapp/myapp/: __main__.py  app.py  logger.py  urls.json
