[tool.poetry]
name = "fernet-database-encryption"
version = "0.1.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.17"
SQLAlchemy-Utils = "^0.37.6"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pylint = "^2.8.3"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
