[tool.poetry]
name = "instructor-example"
version = "0.1.0"
description = ""
authors = ["Ryan Freckleton <ryan.freckleton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
instructor = "^1.3.2"
openai = "^1.30.4"
graphviz = "^0.20.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
