[tool.poetry]
name = "pysprings-notebooks"
version = "0.1.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
